# JaxPM

./: .all-contributorsrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  design.md  pyproject.toml  pytest.ini  requirements-test.txt  setup.py
.github/workflows/: formatting.yml  python-publish.yml  tests.yml
bench/: bench_forces.py  run_pm_compare.py  slurm_strong_scaling.sh  slurm_weak_scaling.sh
benchmarks/: bench_pm.py  bench_pmwd.py  particle_mesh.slurm  particle_mesh_a100.slurm  particle_mesh_v100.slurm  pmwd_a100.slurm  pmwd_pm.slurm  pmwd_v100.slurm  run_all_jobs.sh
dev/: CAMELS-loss-several_steps-TimeDependent.ipynb  HamiltonianGNN.ipynb  JaxPM_ODE-tCOLA.ipynb  JaxPM_ODE.ipynb  jaxdecomp.py  job_pfft.sh  test_pfft.py  test_script.py
docs/: conf.py  index.rst  requirements.txt
docs/notebooks/: 01-Introduction.ipynb  02-Advanced_usage.ipynb  02b-Painting_and_Deconvolution.ipynb  03-MultiGPU_PM_Halo.ipynb  04-MultiGPU_PM_Solvers.ipynb  04-MultiGPU_PM_Spherical.ipynb  05-MultiHost_PM.ipynb  05-MultiHost_PM.py  06-Animating_PM_Fields.ipynb  08-convergence-vs-glass.ipynb  README.md
jaxpm/: __init__.py  distributed.py  distributed_ops.py  distributed_pm.py  growth.py  kernels.py  lensing.py  mg_forces.py  multigrid.py  nn.py  ode.py  ops.py  painting.py  painting_utils.py  plotting.py  pm.py  raytracing_flatsky.py  solvers.py  spherical.py  utils.py
jaxpm/_src/: base_ops.py  painting_ops.py  spmd_config.py
jaxpm/nbody/: ode.py  (+1 more)
notebooks/: 01-Introduction.ipynb  02-Advanced_usage.ipynb  02-MultiGPU_PM.ipynb  02b-Painting_and_Deconvolution.ipynb  03-MultiHost_PM.ipynb  03-MultiHost_PM.py  04-MultiGPU_PM_Solvers.ipynb  05-MultiHost_PM.ipynb  05-MultiHost_PM.py  06-Animating_PM_Fields.ipynb  06-Animating_PM_Fields.ipynb.REMOVED.git-id  06-RayTracing.ipynb  07-SphericalRayTracing.ipynb  07-Spherical_Painting_Methods.ipynb  07-Spherical_RayTracing.ipynb  08-Kappa-Comparison-vs-Theory.ipynb  08-convergence-vs-glass.ipynb  09-Spherical_Deconvolution.ipynb  Introduction.ipynb  ParallelNbody-LPT.ipynb  Plot.ipynb  README.md  lensing_demo.ipynb  power_spec_analysis.py  ray_trace.py  spherical_ray_trace.py  visualize.py
scripts/: bench_pm.py  bench_pmwd.py  distributed_pm.py  distributed_utils.py  eval_decomp_ode.ipynb  particle_mesh.slurm  test_fft3d.py  test_nbody.py
tests/: conftest.py  helpers.py  test_against_fpm.py  test_convergence_vs_glass.py  test_distributed_pm.py  test_flat_sky_cl.py  test_gradients.py  test_painting.py  test_pm_forces.py  test_sharded_array.py  test_spherical_painting_methods.py
working/: TASKS.md
(+2 files in other folders)
