[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxpm"
dynamic = ["version"]
description = "A simple Particle-Mesh implementation in JAX"
authors = [{ name = "JaxPM developers" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/DifferentiableUniverseInitiative/JaxPM" }
dependencies = [
  "jax_cosmo",
  "jax>=0.4.35",
  "jaxdecomp>=0.2.8",
  "jax-healpy>=0.5.0"
]

[project.optional-dependencies]
test = [
  "pytest",
  "diffrax"
]

[tool.setuptools]
packages = ["jaxpm"]

[tool.setuptools_scm]
version_file = "jaxpm/_version.py"
