[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxpm"
dynamic = ["version"]
description = "A simple Particle-Mesh implementation in JAX"
authors = [{ name = "JaxPM developers" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/DifferentiableUniverseInitiative/JaxPM" }
dependencies = [
  "jax_cosmo",
  "jax>=0.6.1",
  "jaxdecomp>=0.2.9",
  "jax-healpy>=0.5.0"
]

[project.optional-dependencies]
test = [
  "pytest",
  "diffrax"
]
# Spherical (HEALPix) painting + window deconvolution. jax_healpy[recommended]
# pulls s2fft (the harmonic-transform engine behind map2alm/alm2map); healpy is
# needed for hp.pixwin in deconvolve_map (it is NOT pulled by [recommended]).
spherical = [
  "jax_healpy[recommended]",
  "healpy"
]

[tool.setuptools]
packages = ["jaxpm"]

[tool.setuptools_scm]
version_file = "jaxpm/_version.py"
